# para_porter

./: .gitignore  Cargo.toml
para_porter_client/: CO0008Y2(sh5a0-a).txt  Cargo.toml  t.txt
para_porter_client/sample/: CO0013Z0(mh5b0-b).txt  ItemMaster.INI
para_porter_client/setting/: setting.json
para_porter_client/src/: main.rs  porter.rs
para_porter_server/: Cargo.toml  Rocket.toml
para_porter_server/sample/: para_lego.py
para_porter_server/setting/: para_history.json  para_meta.json  setting.json
para_porter_server/src/: main.rs
para_seeker/: Cargo.toml  package-lock.json  package.json
para_seeker/NOKENV/: CO0017W2(mh5b0-b).txt  ItemMaster.INI
para_seeker/setting/: para_porter_log.json  setting.json
para_seeker/src/: home_menu.rs  main.rs  menu.rs  service.rs
para_seeker/src-tauri/: Cargo.toml  tauri.conf.json
para_seeker/src-tauri/src/: main.rs
