[package]
name = "para_porter_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
library = {path = "../library"}
rocket = { version = "0.5.0", features = ["json"] }
serde ={ version = "1.0",features = ["derive"]}
serde_json = "1.0.114"
