[package]
name = "para_seeker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
library = {path = "../library" }
console = "0.15.8"
dialoguer = "0.11.0"
indicatif = "0.17.8"
reqwest = "0.12.1"
tokio = { version = "1.36.0", features = ["full"] }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
string_py.workspace = true

